--- a/cadvisor-daemonset.yaml
+++ b/cadvisor-daemonset.yaml
@@ -38,8 +38,7 @@ spec:
             containerPort: 8080
             protocol: TCP
         args:
-          - --profiling
-          - --housekeeping_interval=3s
+          - --housekeeping_interval=10s
       terminationGracePeriodSeconds: 30
       volumes:
       - name: rootfs
@@ -62,10 +61,11 @@ metadata:
   namespace: kube-system
 spec:
   type: NodePort
+  externalTrafficPolicy: Local
   selector:
     name: cadvisor
   ports:
   - name: http
     protocol: TCP
-    port: 8080
+    port: 80
     targetPort: 8080
